tests/type_errors/tuple_where_record_expected.nos
# expect_error: Cannot unify types
# Passing a tuple where a record type is expected should fail at compile time
type Pair = { first: Int, second: Int }
sumPair(p: Pair) = p.first + p.second
main() = sumPair((1, 2))
